[package]
name = "risuai"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde_json = "1.0"
tiktoken-rs = "0.4.0"
base64 = "0.21.0"
reqwest = { version = "0.11.16", features = ["json"] }
darling = "0.20.3"
zip = "0.6.6"
tar = "0.4.40"
eventsource-client = "0.12.2"
futures = "0.3.30"
url = "2.2"
uuid = { version = "1.9.1", features = [ "v4" ] }
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-deep-link = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [lib]
# name = "alib"
# crate-type = ["staticlib", "cdylib", "rlib", "lib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-updater = "2"
